--- a/match-api/src/main/resources/application.properties
+++ b/match-api/src/main/resources/application.properties
@@ -8,3 +8,15 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #logging.level.org.springframework=DEBUG
 logging.level.match=DEBUG
+
+
+#server
+server.compression.enabled=true
+server.compression.mime-types=text/html,text/css,application/json
+
+#resources ## see https://github.com/snicoll-demos/spring-boot-4tw-uni
+spring.resources.static-locations=classpath:/static/,file://${user.dir}/../match-web/app/
+
+#devtools
+spring.devtools.restart.additional-paths=../match-web/app/
+spring.devtools.restart.additional-exclude=**/*.js,**/*.css
