add first ng componenet -> login

--- a/match-api/src/main/resources/application.properties
+++ b/match-api/src/main/resources/application.properties
@@ -18,5 +18,5 @@ server.compression.mime-types=text/html,text/css,application/json
 spring.resources.static-locations=classpath:/static/,file://${user.dir}/../match-web/app/
 
 #devtools
-spring.devtools.restart.additional-paths=../match-web/app/
-spring.devtools.restart.additional-exclude=**/*.js,**/*.css
+#spring.devtools.restart.additional-paths=../match-web/app/
+#spring.devtools.restart.additional-exclude=**/*.js,**/*.css
