--- a/match-web/bower.json
+++ b/match-web/bower.json
@@ -15,7 +15,10 @@
     "angular-bootstrap": "~1.3.1",
     "components-font-awesome": "~4.5.0",
     "angular-animate": "~1.5.3",
-    "angular-touch": "~1.5.3"
+    "angular-touch": "~1.5.3",
+    "angular-translate": "~2.11.0",
+    "bootstrap-rtl": "~3.4.0",
+    "angular-translate-loader-static-files": "~2.11.0"
   },
   "resolutions": {
     "angular": "~1.4.0"
