--- a/match-api/pom.xml
+++ b/match-api/pom.xml
@@ -4,11 +4,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>match</groupId>
-	<artifactId>match</artifactId>
+	<artifactId>match-api</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>match</name>
+	<name>match-api</name>
 	<description>Demo project for Spring Boot</description>
 
 	<parent>
