--- a/match-api/pom.xml
+++ b/match-api/pom.xml
@@ -78,6 +78,10 @@
 			<artifactId>spring-security-data</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
