--- a/match-web/bower.json
+++ b/match-web/bower.json
@@ -20,7 +20,8 @@
     "bootstrap-rtl": "~3.4.0",
     "angular-translate-loader-static-files": "~2.11.0",
     "angular-resource": "~1.5.3",
-    "angular-messages": "~1.5.3"
+    "angular-messages": "~1.5.3",
+    "angular-bootstrap-switch": "~0.5.0"
   },
   "resolutions": {
     "angular": "~1.4.0"
