--- a/match-api/src/main/resources/application.properties
+++ b/match-api/src/main/resources/application.properties
@@ -6,7 +6,7 @@ spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
 
-#logging.level.org.springframework=DEBUG
+logging.level.org.springframework=DEBUG
 logging.level.match=DEBUG
 
 
