--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,3 +1,8 @@
 #!/bin/bash
+
+export JAVA_HOME=/etc/alternatives/java_sdk_1.8.0
+export PATH=$JAVA_HOME/bin:$PATH
+export M2_HOME=$OPENSHIFT_DIY_DIR/.m2
+
 cd $OPENSHIFT_REPO_DIR
 cd match-api; mvn clean package -DskipTests=true; cd ../
