add j8 &m2 to openshift

--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -3,5 +3,8 @@
 export JAVA_HOME=/etc/alternatives/java_sdk_1.8.0
 export PATH=$JAVA_HOME/bin:$PATH
 
+echo $JAVA_HOME
+java --version
+
 cd $OPENSHIFT_REPO_DIR
 cd match-api; mvn clean package -DskipTests=true -Dmaven.repo.local=$OPENSHIFT_DIY_DIR/.m2; cd ../
