--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -4,7 +4,7 @@ export JAVA_HOME=/etc/alternatives/java_sdk_1.8.0
 export PATH=$JAVA_HOME/bin:$PATH
 
 echo $JAVA_HOME
-java --version
+java -version
 
 cd $OPENSHIFT_REPO_DIR
 cd match-api; mvn clean package -DskipTests=true -Dmaven.repo.local=$OPENSHIFT_DIY_DIR/.m2; cd ../
