add j8 &m2 to openshift

--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,6 +1,8 @@
 #!/bin/bash
 
+alias javac='/etc/alternatives/java_sdk_1.8.0/bin/javac'
 alias java='/etc/alternatives/java_sdk_1.8.0/bin/java'
+javac -version
 java -version
 
 cd $OPENSHIFT_REPO_DIR
