--- a/.openshift/action_hooks/build
+++ b/.openshift/action_hooks/build
@@ -1,4 +1,9 @@
 #!/bin/bash
 
+
+export JAVA_HOME=/etc/alternatives/java_sdk_1.8.0
+export JAVACMD=$JAVA_HOME/bin/java
+export M2_HOME=/usr/share/java/apache-maven-3.0.4
+
 cd $OPENSHIFT_REPO_DIR
-cd match-api; /usr/share/java/apache-maven-3.0.4/bin/mvn clean package -DskipTests=true -Dmaven.repo.local=$OPENSHIFT_DIY_DIR/.m2; cd ../
+cd match-api; $$M2_HOME/bin/mvn clean package -DskipTests=true -Dmaven.repo.local=$OPENSHIFT_DIY_DIR/.m2; cd ../
