--- a/match-api/src/main/resources/application.properties
+++ b/match-api/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 #logging.level.org.springframework=DEBUG
 logging.level.match=DEBUG
-
+logging.file=match.log
 
 #server
 server.compression.enabled=true
