--- a/match-api/src/main/resources/application-heroku.properties
+++ b/match-api/src/main/resources/application-heroku.properties
@@ -6,4 +6,4 @@ spring.datasource.minIdle=2
 spring.datasource.initialSize=5
 spring.datasource.removeAbandoned=true
 
-spring.resources.static-locations=classpath:/static/,file://${user.dir}/match-web/app/
+spring.resources.static-locations=classpath:/static/
