--- a/match-api/src/main/resources/application.properties
+++ b/match-api/src/main/resources/application.properties
@@ -19,3 +19,8 @@ spring.resources.static-locations=classpath:/static/,file://${user.dir}/../match
 #devtools
 #spring.devtools.restart.additional-paths=../match-web/app/
 #spring.devtools.restart.additional-exclude=**/*.js,**/*.css
+
+
+server.compression.enabled=true
+server.compression.mime-types=application/javascript,application/json,application/xml,text/html,text/xml,text/plain,text/css
+			 
