add 401 http ng interceptor

--- a/match-api/src/main/resources/application.properties
+++ b/match-api/src/main/resources/application.properties
@@ -4,14 +4,14 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-
+#logging
 #logging.level.org.springframework=DEBUG
 logging.level.match=DEBUG
 logging.file=match.log
 
 #server
 server.compression.enabled=true
-server.compression.mime-types=text/html,text/css,application/json
+server.compression.mime-types=application/javascript,application/json,application/xml,text/html,text/xml,text/plain,text/css
 
 #resources ## see https://github.com/snicoll-demos/spring-boot-4tw-uni
 spring.resources.static-locations=classpath:/static/,file://${user.dir}/../match-web/app/
@@ -19,8 +19,3 @@ spring.resources.static-locations=classpath:/static/,file://${user.dir}/../match
 #devtools
 #spring.devtools.restart.additional-paths=../match-web/app/
 #spring.devtools.restart.additional-exclude=**/*.js,**/*.css
-
-
-server.compression.enabled=true
-server.compression.mime-types=application/javascript,application/json,application/xml,text/html,text/xml,text/plain,text/css
-			 
