--- a/match-api/pom.xml
+++ b/match-api/pom.xml
@@ -84,6 +84,12 @@
 			<groupId>com.fasterxml.jackson.datatype</groupId>
 			<artifactId>jackson-datatype-jsr310</artifactId>
 		</dependency>
+		
+		<dependency>
+			<groupId>match</groupId>
+			<artifactId>match-web</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
