--- a/match-api/pom.xml
+++ b/match-api/pom.xml
@@ -101,6 +101,13 @@
 	        <artifactId>h2</artifactId>
 	        <scope>test</scope>
     	</dependency>
+    	
+    	<dependency>
+		    <groupId>com.google.code.gson</groupId>
+		    <artifactId>gson</artifactId>
+		    <scope>test</scope>
+		</dependency>
+		    	
 		
 	</dependencies>
 
